<resources>
    <string name="app_name">Sowbhagya</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="don_t_received_the_otp">Did not receive the OTP ?</string>
    <string name="resend">RESEND</string>
    <string name="title_activity_home">Home_</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_category">Category</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="server_not_responding_please_try_later">server not responding. please try later.</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="yes">Yes</string>
    <string name="login">Login</string>
    <string name="register">Registration</string>
    <string name="email">Email</string>
    <string name="enter_regisered_email_id">Enter Registered Email Id</string>
    <string name="name">Name</string>
    <string name="phone">Mobile Number</string>
    <string name="house_no">House No/Flat No/Building Name/Appartment Name</string>
    <string name="locality">Locality</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="picode">Pin code</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sing_in">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="rs">\u20B9</string>
    <string name="whatasapp">smsto:9391252141</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_found">No Data found</string>
    <string name="tc"><![CDATA[Terms & conditions]]></string>
    <string name="pp">Privacy policy</string>
    <string name="shipping_policy">"Shipping policy "</string>
    <string name="refund_policy">Return policy</string>
    <string name="app_title">Sowbhagya Biotech</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="contact_us">Contact Us</string>
    <string name="start_note">Welcome to our Sowbhagya Biotech, where natural solutions meet modern farming.</string>

</resources>