<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/nav_item_home_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/nav_item_search_selector"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/nav_item_category_selector"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/nav_item_cart_selector"
        android:title="@string/title_cart" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/nav_item_profile_selector"
        android:title="@string/title_profile" />

</menu>