<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.authentication.LoginActivity"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/frameLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/llCustomToolBar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/tab_select_color">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:src="@drawable/ic_back_arrow"
                    android:tint="@color/white"
                    android:id="@+id/ivClose"/>
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/gotham_medium_11ssp_2F3031"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/register" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:scaleType="fitXY"
                android:background="@drawable/login_banner" />


            <LinearLayout
                android:id="@+id/llRegistrationForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textCapSentences"
                        android:background="@drawable/bg_edit_text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiePhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:background="@drawable/bg_edit_text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/bg_edit_text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilHouseNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieHouseNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/house_no"
                        android:inputType="textCapSentences"
                        android:background="@drawable/bg_edit_text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLandMark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieLandMark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/landmark"
                        android:inputType="textCapSentences"
                        android:background="@drawable/bg_edit_text"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLocality"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieLocality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/locality"
                        android:inputType="textCapSentences"
                        android:background="@drawable/bg_edit_text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city"
                        android:inputType="textCapSentences"
                        android:background="@drawable/bg_edit_text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilState"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/state"
                        android:inputType="textCapSentences"
                        android:background="@drawable/bg_edit_text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPincode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiePicode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/picode"
                        android:inputType="number"
                        android:maxLength="6"
                        android:background="@drawable/bg_edit_text"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <CheckBox
                        android:id="@+id/cbAgree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@+id/cbAgree"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="left"
                            android:textColor="#5E5E5E"

                            android:layout_alignParentRight="true"
                            android:text="By Continuing you agree to our"
                            android:gravity="left"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_margin="2dp">
                            <TextView
                                android:id="@+id/tvTerms"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="left"
                                android:text="Terms of service"
                                android:textColor="#C3202B"

                                android:gravity="left"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" and "
                                android:textColor="#5E5E5E"
                               />
                            <TextView
                                android:id="@+id/tvPrivacy"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="left"
                                android:text="Privacy Policy"

                                android:textColor="#C3202B"
                                android:gravity="left"/>
                        </LinearLayout>


                    </LinearLayout>

                </RelativeLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegistration"
                    android:layout_width="@dimen/_170sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_9sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:background="@drawable/rounded_button_submit"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_20sdp">
                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/gotham_medium_11ssp_2F3031"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/already_have_an_account" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSignIn"
                        style="@style/gotham_medium_11ssp_2F3031"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:textColor="@color/tab_hilet_color"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/sing_in"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>





        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>
    </ScrollView>
</layout>